--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						</blockquote>
 				</section>
 				<section>
-					<img src="/images/git-diff.png" />
+					<img src="images/git-diff.png" />
 				</section>
 				<section>
 					<a href="https://rogerdudler.github.io/git-guide/" target="_blank">https://rogerdudler.github.io/git-guide/</a>
@@ -108,7 +108,7 @@
 				</section>
 				<section>
 					<h4>repetitive tasks</h4>
-					<img src="/images/stupid-bird.gif" />
+					<img src="images/stupid-bird.gif" />
 				</section>
 				<section>
 					<ul>
@@ -164,7 +164,7 @@ composer init
 				</section>
 				<section>
 					<h3>Developer</h3>
-					<img src="/images/developer-fear.gif" />
+					<img src="images/developer-fear.gif" />
 				</section>
 				<section>
 					<h2>Vagrant</h2>
@@ -258,6 +258,7 @@ composer init
 
 	// Move the location of the content dir
 	define('WP_CONTENT_DIR', dirname(__FILE__).'/../content');
+	define( 'WP_CONTENT_URL', '/content');
 					</pre>
 				</section>
 				<section>
@@ -271,8 +272,9 @@ composer init
 				<section>
 					<pre>
 	RewriteEngine on
-	RewriteCond %{REQUEST_FILENAME} !-f
-	RewriteCond %{REQUEST_FILENAME} !-d
+	RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
+	RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
+	RewriteCond %{REQUEST_URI} !^/phpmyadmin
 	RewriteRule ^(.*)$ /wp/$1
 
 					</pre>
@@ -389,6 +391,69 @@ Text Domain:  twentynineteenchild
 					<pre>
 	dep init
 					</pre>
+				</section>
+				<section>
+					<pre>
+	namespace Deployer;
+
+	require 'recipe/common.php';
+
+	// Project name
+	set('application', 'my_project');
+	...
+	// Hosts
+
+	host('project.com')
+		->set('deploy_path', '~/{{application}}');
+
+
+	// Tasks
+	...
+
+	// [Optional] If deploy fails automatically unlock.
+	after('deploy:failed', 'deploy:unlock');
+
+					</pre>
+				</section>
+				<section>
+					<pre>
+	desc('Deploy your project');
+	task('deploy', [
+		'deploy:info',
+		'deploy:prepare',
+		'deploy:lock',
+		'deploy:release',
+		'deploy:update_code',
+		'deploy:shared',
+		'deploy:writable',
+		'deploy:vendors',
+		'deploy:clear_paths',
+		'deploy:symlink',
+		'deploy:unlock',
+		'cleanup',
+		'success'
+	]);
+					</pre>
+				</section>
+
+				<section>
+					<a href="https://github.com/ilbonzo/steps-to-better-manage-and-deploy-code-demo/blob/master/deploy.php" target="_blank">https://github.com/ilbonzo/steps-to-better-manage-and-deploy-code-demo/blob/master/deploy.php</a>
+				</section>
+
+				<section>
+					<pre>
+		dep deploy
+					</pre>
+				</section>
+
+				<section>
+					<pre>
+		dep rollback
+					</pre>
+				</section>
+				<section>
+					<h3>Demo repository</h3>
+					<a href="https://github.com/ilbonzo/steps-to-better-manage-and-deploy-code-demo" target="_blank">https://github.com/ilbonzo/steps-to-better-manage-and-deploy-code-demo</a>
 				</section>
 				<section>
 					<h2>Matteo Magni</h2>
